# ros_workshop

ros_message/: CMakeLists.txt  listener.cpp  main.cpp  package.xml
ros_node/: CMakeLists.txt  main.cpp  package.xml
