<package>
    <name>ros_tute_message</name>
    <version>1.0.0</version>
    <description>
        Simply tute to write a rosnode
    </description>
    <author>Guang</author>
    <maintainer email="ghu1@student.unimelb.edu.au">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <!-- <url>https://github.com/RoboMaster/RoboRTS</url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <!-- <build_depend>actionlib</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <!-- <run_depend>actionlib</run_depend> -->
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
    </export>

</package>
